# RTG

./: .gitignore  README.md  pyproject.toml  test.py
cfg/: cfg_00001.npz  cfg_00002.npz  cfg_00003.npz  cfg_00004.npz  cfg_00005.npz  cfg_00006.npz  cfg_00007.npz  cfg_00008.npz  cfg_00009.npz  cfg_00010.npz  cfg_00011.npz  cfg_00012.npz  cfg_00013.npz  cfg_00014.npz  cfg_00015.npz  cfg_00016.npz  cfg_00017.npz  cfg_00018.npz  cfg_00019.npz  cfg_00020.npz  cfg_00021.npz  cfg_00022.npz  cfg_00023.npz  cfg_00024.npz  cfg_00025.npz  cfg_00026.npz  cfg_00027.npz  cfg_00028.npz  cfg_00029.npz  cfg_00030.npz  cfg_00031.npz  cfg_00032.npz  cfg_00033.npz  cfg_00034.npz  cfg_00035.npz  cfg_00036.npz  cfg_00037.npz  cfg_00038.npz  cfg_00039.npz  cfg_00040.npz  (+2034 more)
cfg_lock/: cfg_00002.npz  cfg_00004.npz  cfg_00006.npz  cfg_00008.npz  cfg_00010.npz  cfg_00012.npz  cfg_00014.npz  cfg_00016.npz  cfg_00018.npz  cfg_00020.npz  cfg_00022.npz  cfg_00024.npz  cfg_00026.npz  cfg_00028.npz  cfg_00030.npz  cfg_00032.npz  cfg_00034.npz  cfg_00036.npz  cfg_00038.npz  cfg_00040.npz  cfg_00042.npz  cfg_00044.npz  cfg_00046.npz  cfg_00048.npz  cfg_00050.npz  cfg_00052.npz  cfg_00054.npz  cfg_00056.npz  cfg_00058.npz  cfg_00060.npz  cfg_00062.npz  cfg_00064.npz  cfg_00066.npz  cfg_00068.npz  cfg_00070.npz  cfg_00072.npz  cfg_00074.npz  cfg_00076.npz  cfg_00078.npz  cfg_00080.npz  (+960 more)
plots/: noise_vs_chsh_T002.csv
scripts/: K_1024_same_rho1p20_a2p50_b1p60_tfine.json  K_1024_same_rho1p2_a20p5_b1p6_tfine.json  K_2048_CURRENT_smallt.json  K_2048_opp_rho1p16_a20p45_bIGNORED_tfine.json  (+434 more)
src/rtg/: __init__.py  (+2 more)
(+3923 files in other folders)
